edit page added

--- a/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
@@ -26,10 +26,15 @@
             <td>@restaurant.Location</td>
             <td>@restaurant.Cuisine</td>
             <td>
-                <a class="btn btn-lg" 
-                   asp-page="./Detail" 
+                <a class="btn btn-lg"
+                   asp-page="./Detail"
                    asp-route-restaurantId="@restaurant.Id">
-                    <i class="glyphicon glyphicon-zoom-in"></i>
+                    <i class="btn btn-success"></i>
+                </a>
+                <a class="btn btn-lg"
+                   asp-page="./Edit"
+                   asp-route-restaurantId="@restaurant.Id">
+                    <i class="btn btn-info"></i>
                 </a>
             </td>
         </tr>
