--- a/OdeToFood/OdeToFood/Pages/Restaurants/Edit.cshtml
+++ b/OdeToFood/OdeToFood/Pages/Restaurants/Edit.cshtml
@@ -10,16 +10,18 @@
     <input type="hidden" asp-for="Restaurant.Id" />
     <div class="form-group">
         <label asp-for="Restaurant.Name"></label>
-        <input asp-for="Restaurant.Name" class="form-control" />
+        <input asp-for="Restaurant.Name" class="form-control" required/>
     </div>
     <div class="form-group">
         <label asp-for="Restaurant.Location"></label>
-        <input asp-for="Restaurant.Location" class="form-control" />
+        <input asp-for="Restaurant.Location" class="form-control" required />
+
     </div>
     <div class="form-group">
         <label asp-for="Restaurant.Cuisine"></label>
         <select class="form-control" asp-for="Restaurant.Cuisine"
-                                     asp-items="Model.Cuisines">
+                asp-items="Model.Cuisines">
+
 
         </select>
     </div>
